--- a/desafio-3-clase6/package.json
+++ b/desafio-3-clase6/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "desafios-backend",
+  "name": "desafio-3-clase6",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+  "license": "ISC"
 }
